--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,28 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
-alias(libs.plugins.android.application) apply false
+    alias(libs.plugins.android.application) apply false
     alias(libs.plugins.kotlin.android) apply false
     alias(libs.plugins.android.library) apply false
 }
+
+def localProperties = new Properties()
+def localPropertiesFile = rootProject.file('local.properties')
+if (localPropertiesFile.exists()) {
+    localProperties.load(localPropertiesFile.newInputStream())
+}
+// 将 local.properties 中的值添加到项目属性中
+localProperties.each { key, value ->
+    project.ext.set(key, value)
+}
+
+static def getLastTag() {
+    def process = 'git describe --tags --abbrev=0'.execute()
+    process.waitFor()
+    if (process.exitValue() == 0) {
+        return process.text.trim()
+    } else {
+        return "1.0.0"
+    }
+}
+project.ext.LIB_VERSION = getLastTag()
+println "Last tag: ${LIB_VERSION}"
