--- a/smart-network/build.gradle
+++ b/smart-network/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     alias(libs.plugins.android.library)
     alias(libs.plugins.kotlin.android)
+    id 'maven-publish'
 }
 
 android {
@@ -38,4 +39,33 @@ dependencies {
     androidTestImplementation libs.androidx.junit
     androidTestImplementation libs.androidx.espresso.core
     implementation libs.okhttp
+}
+
+//maven-publish配置
+group = LIB_GROUP
+version = LIB_VERSION
+description = '智能选网库'
+tasks.register('sourcesJar', Jar) {
+    from android.sourceSets.main.java.srcDirs
+    archiveClassifier.set('sources')
+}
+afterEvaluate {
+    publishing {
+        publications {
+            release(MavenPublication) {
+                artifactId 'smart-network'
+                from components.release
+                artifact sourcesJar
+            }
+        }
+        repositories {
+            maven {
+                url 'https://jitpack.io'
+                credentials {
+                    username project.findProperty("jitpack.username")
+                    password project.findProperty("jitpack.password")
+                }
+            }
+        }
+    }
 }
