--- a/smart-network/src/main/AndroidManifest.xml
+++ b/smart-network/src/main/AndroidManifest.xml
@@ -1,6 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
+
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.CHANGE_NETWORK_STATE" />
+
+    <application>
+        <provider
+            android:name=".okhttp.SdkInitProvider"
+            android:authorities="${applicationId}.SdkInitProvider"
+            android:exported="false"
+            android:initOrder="100" />
+    </application>
 </manifest>
