--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,4 +44,5 @@ dependencies {
     androidTestImplementation libs.androidx.espresso.core
     implementation libs.okhttp
     implementation project(':smart-network')
+    implementation 'androidx.exifinterface:exifinterface:1.3.7'
 }
